<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.QuizResultFragment">

    <TextView
        android:id="@+id/tv_correctness_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        app:layout_constraintBottom_toTopOf="@+id/tv_quiz_history_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="90% Correct" />

    <TextView
        android:id="@+id/tv_encouraging_words"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_result_correctness_to_words"
        android:text="@string/text_encouraging_words_best"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintEnd_toEndOf="@+id/tv_correctness_rate"
        app:layout_constraintStart_toStartOf="@+id/tv_correctness_rate"
        app:layout_constraintTop_toBottomOf="@+id/tv_correctness_rate" />

    <TextView
        android:id="@+id/tv_quiz_history_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_result_quiz_history"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintBottom_toTopOf="@+id/wrapper_quiz_history_header"
        app:layout_constraintStart_toStartOf="@+id/tv_quiz_history_body" />

    <LinearLayout
        android:id="@+id/wrapper_quiz_history_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/tv_quiz_history_body"
        app:layout_constraintEnd_toEndOf="@+id/tv_quiz_history_body"
        app:layout_constraintStart_toStartOf="@+id/tv_quiz_history_body">

        <TextView
            android:id="@+id/tv_header_result"
            style="@style/text_quiz_history_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/header_result_result" />

        <TextView
            android:id="@+id/tv_header_question"
            style="@style/text_quiz_history_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/header_result_question" />

        <TextView
            android:id="@+id/tv_header_correct"
            style="@style/text_quiz_history_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/header_result_correct_answer" />

        <TextView
            android:id="@+id/tv_header_user"
            style="@style/text_quiz_history_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/header_result_user_answer" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tv_quiz_history_body"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_quiz_history"
        android:layout_marginStart="@dimen/space_all_to_screen_edge"
        android:layout_marginEnd="@dimen/space_all_to_screen_edge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        tools:listitem="@layout/item_quiz_history" />

    <Button
        android:id="@+id/btn_quiz_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_btn_to_all"
        android:text="@string/btn_text_quiz_again"
        app:layout_constraintEnd_toStartOf="@+id/btn_quiz_end"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_quiz_history_body" />

    <Button
        android:id="@+id/btn_quiz_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_btn_to_all"
        android:text="@string/btn_text_quiz_end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_quiz_again"
        app:layout_constraintTop_toBottomOf="@+id/tv_quiz_history_body" />

</androidx.constraintlayout.widget.ConstraintLayout>