<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/colorPrimary"
    android:elevation="@dimen/elevation_standard"
    tools:context=".ui.LoginFragment">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_desc_logo"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_sign_in_google"
        app:layout_constraintStart_toStartOf="@+id/btn_sign_in_google"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/tv_sign_in_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_sign_in_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo"
        app:layout_constraintVertical_bias="0.40" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_sign_in_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_btn_to_all"
        app:layout_constraintEnd_toEndOf="@+id/btn_sign_in_anonymous"
        app:layout_constraintStart_toStartOf="@+id/btn_sign_in_anonymous"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_in_message" />

    <Button
        android:id="@+id/btn_sign_in_anonymous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_btn_to_all"
        android:text="@string/btn_text_sign_in_anonymous"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in_google" />


</androidx.constraintlayout.widget.ConstraintLayout>